--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 	<div class="container">
         <div id="messages"></div>
-		<img src="./static/logo.png" alt="Logo" class="logo">
-		<input type="text" id="searchBox" class="search-box" placeholder="Don't Googleit, Smoochit!">
-		<button onclick="getResponse()" class="search-button">Search</button>
-		<a href="#" class="link">Donate</a>
+		<img src="./static/logo-new.png" alt="Logo" class="logo">
+		<input type="text" id="searchBox" class="search-box" placeholder="What would you like to know?">
+		<button onclick="getResponse()" class="search-button">Just Smoochit!</button>
+		<a href="#" class="link">Get your own ChatGTP clone</a>
 	</div>
 
     <script>
