--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<div class="container">
         <div id="messages"></div>
 		<img src="./static/logo-new.png" alt="Logo" class="logo">
-		<input type="text" id="searchBox" class="search-box" placeholder="What would you like to know?">
-		<button onclick="getResponse()" class="search-button">Just Smoochit!</button>
+		<input type="text" id="input" class="input-box" placeholder="What would you like to know?">
+		<button onclick="getResponse()" class="submit-button">Just Smoochit!</button>
 		<a href="#" class="link">Get your own ChatGTP clone</a>
 	</div>
 
@@ -26,7 +26,7 @@
         }
 
         function getResponse() {
-            var query = document.getElementById("searchBox").value;
+            var query = document.getElementById("input").value;
             var messages = [
                 { role: "user", content: query }
             ];
